<resources>
    <string name="app_name">Calculator</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>
    <string name="plus"> + </string>
    <string name="minus"> - </string>
    <string name="multiply"> * </string>
    <string name="divide"> / </string>
    <string name="equals">=</string>
    <string name="point">.</string>
    <string name="open_engineer_calculator">EC</string>
    <string name="open_base_calculator">BC</string>
    <string name="percent"> % </string>
    <string name="clear">C</string>
    <string name="clear_all">CA</string>
    <string name="degree">^</string>
    <string name="root">√</string>
    <string name="factorial">X!</string>
    <string name="cos">CS</string>
    <string name="sin">SN</string>
</resources>