<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    tools:context=".EngineeringCalculatorActivity">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvResultEngineer"
        style="@style/tvResult"
        android:layout_width="@dimen/tvResultWidth"
        android:layout_height="@dimen/tvResultHeight"
        android:gravity="end|center"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llMainLayoutEngineer"
        android:layout_width="@dimen/llMainLayoutWidth"
        android:layout_height="@dimen/llMainLayoutHeight"
        android:layout_margin="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultEngineer">

        <LinearLayout
            android:id="@+id/llFirstLineEngineer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonNumberOneEngineer"
                style="@style/buttonNumberEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"

                android:layout_weight="1"
                android:text="@string/number_one"
                tools:ignore="NestedWeights,VisualLintButtonSize" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonNumberTwoEngineer"
                style="@style/buttonNumberEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_two"
                tools:ignore="NestedWeights,VisualLintButtonSize" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonNumberThreeEngineer"
                style="@style/buttonNumberEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_three"
                tools:ignore="NestedWeights,VisualLintButtonSize" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonDegree"
                style="@style/buttonOperationEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/degree"
                tools:ignore="NestedWeights,VisualLintButtonSize" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonPlusEngineer"
                style="@style/buttonOperationEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/plus"
                tools:ignore="NestedWeights,VisualLintButtonSize" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSecondLineEngineer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonNumberFourEngineer"
                style="@style/buttonNumberEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_four"
                tools:ignore="NestedWeights,VisualLintButtonSize" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonNumberFiveEngineer"
                style="@style/buttonNumberEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_five"
                tools:ignore="NestedWeights,VisualLintButtonSize" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonNumberSixEngineer"
                style="@style/buttonNumberEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_six"
                tools:ignore="NestedWeights,VisualLintButtonSize" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonRoot"
                style="@style/buttonOperationEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/root"
                tools:ignore="NestedWeights,VisualLintButtonSize" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonMinusEngineer"
                style="@style/buttonOperationEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/minus"
                tools:ignore="NestedWeights,VisualLintButtonSize" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llThirdLineEngineer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonNumberSevenEngineer"
                style="@style/buttonNumberEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_seven"
                tools:ignore="NestedWeights,VisualLintButtonSize" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonNumberEightEngineer"
                style="@style/buttonNumberEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_eight"
                tools:ignore="NestedWeights,VisualLintButtonSize" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonNumberNineEngineer"
                style="@style/buttonNumberEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_nine"
                tools:ignore="NestedWeights,VisualLintButtonSize" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonFactorial"
                style="@style/buttonOperationEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/factorial"
                tools:ignore="NestedWeights,VisualLintButtonSize" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonMultiplyEngineer"
                style="@style/buttonOperationEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/multiply"
                tools:ignore="NestedWeights,VisualLintButtonSize" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFourthLineEngineer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonPointEngineer"
                style="@style/buttonOperationEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/point"
                tools:ignore="NestedWeights,VisualLintButtonSize" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonNumberZeroEngineer"
                style="@style/buttonNumberEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_zero"
                tools:ignore="NestedWeights,VisualLintButtonSize" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSin"
                style="@style/buttonOperationEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sin"
                tools:ignore="NestedWeights,VisualLintButtonSize" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonCos"
                style="@style/buttonOperationEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cos"
                tools:ignore="NestedWeights,VisualLintButtonSize" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonDivideEngineer"
                style="@style/buttonOperationEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/divide"
                tools:ignore="NestedWeights,VisualLintButtonSize" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFifthLineEngineer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonOpenBasicCalculator"
                style="@style/buttonEqualsSwitchEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/open_base_calculator"
                tools:ignore="NestedWeights,VisualLintButtonSize" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonPercentEngineer"
                style="@style/buttonOperationEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/percent"
                tools:ignore="NestedWeights,VisualLintButtonSize" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonClearEngineer"
                style="@style/buttonOperationEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/clear"
                tools:ignore="NestedWeights,VisualLintButtonSize" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonClearAllEngineer"
                style="@style/buttonOperationEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/clear_all"
                tools:ignore="NestedWeights,VisualLintButtonSize" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonEqualsEngineer"
                style="@style/buttonEqualsSwitchEngineerCalculator"
                android:layout_width="@dimen/buttonNumberWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/equals"
                tools:ignore="NestedWeights,VisualLintButtonSize" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>